--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Ignore eleventy result
+_site/
+# and node modules
+node_modules/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
